# src/shared/http/routes/index.ts
@@ -5,6 +5,7 @@ import sessionsRouter from '@modules/users/routes/sessions.routes';
 import passwordRouter from '@modules/users/routes/password.routes';
 import profileRouter from '@modules/users/routes/profile.routes';
 import customersRoutes from '@modules/customers/routes/customers.routes';
+import ordersRoutes from '@modules/orders/routes/orders.routes';
 
 const routes = Router();
 
@@ -14,5 +15,6 @@ routes.use('/sessions', sessionsRouter);
 routes.use('/password', passwordRouter);
 routes.use('/profile', profileRouter);
 routes.use('/customers', customersRoutes);
+routes.use('/orders', ordersRoutes);
 
 export default routes;
